# your-little-helper-public

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REFACTOR_PLAN.md  SECURITY.md  demo-settings-template.json  install-easy.sh  install-mac-safe.sh  install-mac.sh  install-windows.bat  secure-git-workflow.sh
.github/workflows/: bespoke-release.yml  build-mac.yml  ci.yml  release.yml
.opencode/: opencode.db-shm  opencode.db-wal
.specify/features/: checklist.md
.specify/features/entropy-bot/: plan.md  spec.md  tasks.md
.specify/features/file-graph/: plan.md  spec.md  tasks.md
.specify/features/semantic-search/: plan.md  spec.md  tasks.md
AppDir/usr/share/applications/: little-helper.desktop
Test-app/.speckit/: session.json
_legacy/web/: package-lock.json
_legacy/workflows/: README.md  fix_system.py  research.py
a-test-app/.speckit/: session.json
crates/agent_host/: Cargo.toml
crates/agent_host/src/: compactor.rs  context_manager.rs  context_token_manager.rs  daily_log.rs  embedding.rs  executor.rs  graph_store.rs  hierarchical_context.rs  lib.rs  prompts.rs  security.rs  skill_executor.rs  token_tracker.rs
crates/agent_host/src/extensions/: mod.rs  parser.rs  script_skill.rs
crates/agent_host/src/skills/: memory_optimizer.rs  mod.rs  security.rs
crates/agent_host/src/skills/common/: audit.rs  git_helper.rs  mod.rs  safe_file_ops.rs  version_history.rs  version_restore.rs  write_file.rs
crates/agent_host/src/skills/content/: mod.rs  text_polisher.rs
crates/agent_host/src/skills/data/: chart_recommender.rs  context_browser.rs  csv_analyzer.rs  mod.rs
crates/agent_host/src/skills/find/: drive_index.rs  file_organize.rs  file_preview.rs  fuzzy_search.rs  mod.rs  reindex.rs
crates/agent_host/src/skills/fix/: auto_update.rs  device_capability.rs  error_explainer.rs  mod.rs  privacy_auditor.rs  process_monitor.rs  startup_optimizer.rs  storage_cleaner.rs  system_diagnostics.rs
crates/agent_host/src/skills/research/: article_reader.rs  mod.rs  source_evaluator.rs  web_search.rs
crates/app/: Cargo.toml
crates/app/assets/: spec-kit-assistant-legacy-node.tgz
crates/app/src/: ascii_art.rs  context.rs  main.rs  ollama_manager.rs  onboarding.rs  preview_panel.rs  refactor.py  secrets.rs  secrets.rs.example  sessions.rs  simple_md.rs  state.rs  support_info.rs  support_info.rs.example  thread_history.rs  types.rs  utils.rs
crates/app/src/modals/: mod.rs  password_dialog.rs
crates/app/src/widgets/: audit_viewer.rs  drag_drop.rs  file_picker.rs  mod.rs  version_history.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  external.rs  gemini.rs  lib.rs  oauth_helper.rs  ollama.rs  openai.rs  router.rs  sse.rs
crates/services/: Cargo.toml
crates/services/src/: embedding_client.rs  entropy_bot.rs  entropy_scorers.rs  file_index.rs  file_search.rs  graph_analyzers.rs  lib.rs  mini_swarm.rs  organizer.rs  slack.rs  support.rs  version_control.rs  web_preview.rs
crates/shared/: Cargo.toml
crates/shared/src/: events.rs  lib.rs  preview_types.rs  session_tree.rs  skill.rs  version.rs
crates/viewers/: Cargo.toml
crates/viewers/src/: csv_viewer.rs  html_viewer.rs  image_viewer.rs  json_viewer.rs  lib.rs  pdf_viewer.rs  text_viewer.rs
docs/: provider-setup.md  setup.md
installer/: READ ME FIRST (Mac).txt  install-windows.ps1  install.sh  setup.applescript  welcome-message.txt  windows-setup.iss
specs/001-preview-window-behaviour/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-preview-window-behaviour/checklists/: requirements.md
specs/001-preview-window-behaviour/contracts/: internal-apis.md  preview-protocol.md
specs/002-agent-skills-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-agent-skills-tools/checklists/: requirements.md
specs/002-agent-skills-tools/contracts/: skill-api.md
specs/003-fix-secure-preview/: spec.md
tests/fixtures/csv_data/: survey_sample.csv
tests/fixtures/mpa_context/: training_data.json
tests/fixtures/sample_files/: budget_2024.xlsx  ocean_project_notes.md
web/app/: globals.css  page.tsx
web/app/api/fix/: route.ts
workflows/utils/: llm.py  system.py
