[package]
name = "agent_host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
providers = { path = "../providers" }
services = { path = "../services" }
shared = { path = "../shared" }
urlencoding = "2.1"
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dirs = "5"
reqwest = { workspace = true }
html2text = { workspace = true }
walkdir = "2.4"
fastembed = "4"
totp-rs = { version = "5.5", features = ["qr"] }
keyring = "2"
rand = "0.8"
base64 = "0.21"
petgraph = { version = "0.8.3", features = ["serde-1"] }
strsim = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
