[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
anyhow = { workspace = true }
shared = { path = "../shared" }
services = { path = "../services" }
agent_host = { path = "../agent_host" }
providers = { path = "../providers" }
viewers = { path = "../viewers" }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
dirs = "5"
rfd = "0.14"
open = "5"
zeroize = { workspace = true }
sysinfo = "0.30"

[package.metadata]
description = "Little Helper - Personal AI Assistant GUI"
