[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
shared = { path = "../shared" }
oauth2 = { workspace = true }
url = { workspace = true }
tiny_http = { workspace = true }
open = { workspace = true }
async-trait = { workspace = true }
