[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
strsim = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
tokio = { workspace = true }
directories = { workspace = true }
shared = { path = "../shared" }
rusqlite = { workspace = true }
git2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
