[package]
name = "viewers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File viewers for Little Helper - PDF, HTML, CSV, Image, JSON, SQLite"

[dependencies]
# Core
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# GUI
egui = "0.27"

# Image handling
image = "0.24"

# CSV/Excel
csv = "1.3"
# calamine = "0.22"  # Excel - add when needed

# Open files in system apps
open = "5"

# SQLite
# rusqlite = { version = "0.29", features = ["bundled"] }  # Add when needed

# PDF - evaluate options:
# pdf = "0.8"           # Pure Rust, limited features
# pdfium-render = "0.8" # Uses PDFium, better quality but needs library

# HTML/WebView - add when implementing:
# wry = "0.24"          # Cross-platform webview

[dev-dependencies]
